--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,12 @@
 *.dll
 *.so
 *.dylib
+generictypealiasesdemo
 
-# Test binary, built with `go test -c`
+# Test binary, built with `golang test -c`
 *.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
+# Output of the golang coverage tool, specifically when used with LiteIDE
 *.out
 
 # Dependency directories (remove the comment below to include it)
