--- a/docker/golang/Dockerfile
+++ b/docker/golang/Dockerfile
@@ -1,1 +1,3 @@
-FROM golang:1.24rc3-alpine@sha256:959adf2f9cdc7b6f5980bcd6b57a5f5d3e220016745367d101ed118fce3a9fa3
+FROM golang:1.24rc3-alpine3.21@sha256:959adf2f9cdc7b6f5980bcd6b57a5f5d3e220016745367d101ed118fce3a9fa3
+
+RUN go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.63.4
