--- a/.github/workflows/hadolint.yml
+++ b/.github/workflows/hadolint.yml
@@ -8,7 +8,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: hadolint/hadolint-action@v3.1.0
         with:
-          dockerfile: docker/node/Dockerfile
+          dockerfile: docker/shellcheck/Dockerfile
+      - uses: hadolint/hadolint-action@v3.1.0
+        with:
+          dockerfile: docker/hadolint/Dockerfile
       - uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: docker/golang/Dockerfile
