--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,4 +1,4 @@
-name: Auto-merge Dependabot PRs if checks pass
+name: Auto-merge Dependabot PRs
 
 on: pull_request
 
@@ -17,26 +17,7 @@ jobs:
         with:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
 
-      - name: Wait for all checks to complete
-        uses: lewagon/wait-on-check-action@v1.3.1
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Check if all checks passed
-        id: checks_passed
-        run: |
-          # This command checks if all statuses are successful. Adjust based on your needs.
-          if gh api /repos/${{ github.repository }}/commits/${{ github.event.pull_request.head.sha }}/status -q '.state'; then
-            echo "::set-output name=result::success"
-          else
-            echo "::set-output name=result::failure"
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Enable auto-merge if checks passed
-        if: steps.checks_passed.outputs.result == 'success'
+      - name: Enable auto-merge for Dependabot PRs
         run: gh pr merge --auto --merge "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
