--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.dylib
 generictypealiasesdemo
 
-# Test binary, built with `golang test -c`
+# Test binary, built with `golang test.yml -c`
 *.test
 
 # Output of the golang coverage tool, specifically when used with LiteIDE
