--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,4 +1,4 @@
-name: Auto-merge Dependabot PRs
+name: Auto-merge PRs
 
 on: pull_request
 
@@ -9,7 +9,7 @@ permissions:
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
-    if: github.actor == 'dependabot[bot]' # Only run for Dependabot PRs
+    if: github.actor == 'dependabot[bot]' || github.actor == 'github-actions[bot]'
     steps:
       - name: Fetch Dependabot metadata
         id: metadata
