--- a/.github/workflows/auto-merge-release-please.yml
+++ b/.github/workflows/auto-merge-release-please.yml
@@ -1,7 +1,6 @@
-name: Release Please Auto-Merge
+name: Auto-merge Release Please PRs
 
-on:
-  pull_request:
+on: pull_request
 
 permissions:
   contents: write
@@ -10,19 +9,10 @@ permissions:
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
-    # Check if the PR is from the release-please bot
-    if: github.actor == 'release-please[bot]'
+    if: github.actor == 'github-actions[bot]'
     steps:
-      - name: Fetch PR information
-        uses: octokit/request-action@v2.x
-        id: get_pr
-        with:
-          route: GET /repos/{owner}/{repo}/pulls/{pull_number}
-          owner: ${{ github.repository_owner }}
-          repo: ${{ github.repository }}
-          pull_number: ${{ github.event.pull_request.number }}
       - name: Enable auto-merge for Release Please PRs
-        run: |
-          gh pr merge --auto --merge "${{ steps.get_pr.outputs.data.html_url }}"
+        run: gh pr merge --auto --merge "$PR_URL"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_URL: ${{github.event.pull_request.html_url}}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
