--- a/.github/workflows/auto-merge-release-please.yml
+++ b/.github/workflows/auto-merge-release-please.yml
@@ -9,7 +9,7 @@ permissions:
 jobs:
   auto-merge:
     runs-on: ubuntu-latest
-    if: github.actor == 'release-please[bot]' # Only trigger for release-please PRs
+    if: github.actor == 'github-actions[bot]' # Only trigger for release-please PRs
     steps:
       - name: Enable auto-merge for Release Please PRs
         run: |
