--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "generictypealiasesdemo",
   "description": "Demo app to test out generic type aliases",
   "scripts": {
+    "commit": "cz",
     "markdown:format": "markdownlint -f",
     "markdown:lint": "markdownlint",
     "prettier:format": "prettier --write --ignore-unknown",
@@ -21,10 +22,17 @@
   "devDependencies": {
     "@commitlint/cli": "19.7.1",
     "@commitlint/config-conventional": "19.7.1",
+    "commitizen": "4.3.1",
+    "cz-conventional-changelog": "3.3.0",
     "husky": "9.1.7",
     "lint-staged": "15.4.3",
     "markdownlint-cli": "0.44.0",
     "prettier": "3.5.0",
     "prettier-plugin-sort-json": "4.1.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
