--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v4.2.2
       - name: Install pnpm
         uses: pnpm/action-setup@v4.1.0
+        with:
+          version: 10
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4.2.0
         with:
